--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,8 +23,7 @@ phases:
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
-      - printf '[{"name":"nodeappstag","imageUri":"%s"}]' $REPOSITORY_URI:latest > imagedefinitions.json
-      - cat imagedefinitions.json
-      
-
-    
+      - printf '[{"name":"%","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - cat imagedefinitions.json 
+artifacts:
+    files: imagedefinitions.json
