--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,5 +22,10 @@ phases:
       - echo Pushing the Docker images...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
+      -  echo Writing image definitions file...
+      -  printf '[{"name":"sar-nodeapp-cont","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      -  cat imagedefinitions.json
+artifacts:
+      files: imagedefinitions.json
       
       
