--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,8 +6,8 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/n9l3w5u1
-      - REPOSITORY_URI=public.ecr.aws/n9l3w5u1/node-app
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 096496349757.dkr.ecr.us-east-1.amazonaws.com
+      - REPOSITORY_URI=096496349757.dkr.ecr.us-east-1.amazonaws.com/demo-repo
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
   build:
@@ -23,7 +23,7 @@ phases:
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       -  echo Writing image definitions file...
-      -  printf '[{"name":"sar-nodeapp-cont","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      -  printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
       -  cat imagedefinitions.json
 artifacts:
       files: imagedefinitions.json
